corrections sur collapses uniques

--- a/kasa/src/style/Apropos.module.css
+++ b/kasa/src/style/Apropos.module.css
@@ -2,10 +2,15 @@
 
     display: flex;
     flex-direction: column;
-    
     align-items: center;
 
     border: 2px solid orange;
+}
+
+.lesBlocs{
+
+    width: 80%;
+    border: 4px solid blue;
 }
 
 
