--- a/kasa/src/style/Card.module.css
+++ b/kasa/src/style/Card.module.css
@@ -57,6 +57,9 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    gap: 20px;
     width: 80%;
 }
+
+
 
